--- a/amadeus-parquet/Cargo.toml
+++ b/amadeus-parquet/Cargo.toml
@@ -27,6 +27,7 @@ features = ["doc"]
 [dependencies]
 amadeus-core = { version = "=0.1.7", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.7", path = "../amadeus-types" }
+async-trait = "0.1"
 brotli = "3.3"
 byteorder = "1.2"
 chrono = { version = "0.4", default-features = false }
