--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -27,10 +27,12 @@ features = ["doc"]
 [dependencies]
 amadeus-core = { version = "=0.1.7", path = "../amadeus-core" }
 amadeus-types = { version = "=0.1.7", path = "../amadeus-types" }
+bytes = "0.5"
 chrono = { version = "0.4", default-features = false }
 futures = "0.3"
-postgres = { version = "0.15", features = ["with-chrono"] }
-postgres-binary-copy = "0.5"
+pin-project = "0.4"
+postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.2"
 sum = "0.1"
+tokio = "0.2"
