--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "amadeus"
-version = "0.1.7"
+version = "0.2.0"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
@@ -14,16 +14,16 @@ parquet postgres aws s3 cloudfront elb json csv logs hadoop hdfs arrow common cr
 """
 repository = "https://github.com/alecmocatta/amadeus"
 homepage = "https://github.com/alecmocatta/amadeus"
-documentation = "https://docs.rs/amadeus/0.1.7"
+documentation = "https://docs.rs/amadeus/0.2.0"
 readme = "README.md"
 edition = "2018"
 
 [badges]
-azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
+azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
 [features]
-constellation = ["constellation-rs"]
+constellation = ["constellation-rs", "serde_traitobject"]
 aws = ["amadeus-aws"]
 commoncrawl = ["amadeus-commoncrawl"]
 parquet = ["amadeus-parquet", "amadeus-derive/parquet"]
@@ -37,21 +37,21 @@ doc = ["amadeus-core/doc", "amadeus-aws/doc", "amadeus-commoncrawl/doc", "amadeu
 features = ["doc", "constellation", "aws", "commoncrawl", "postgres", "csv", "json"]
 
 [dependencies]
-amadeus-core = { version = "=0.1.7", path = "amadeus-core" }
-amadeus-derive = { version = "=0.1.7", path = "amadeus-derive" }
-amadeus-types = { version = "=0.1.7", path = "amadeus-types" }
-amadeus-aws = { version = "=0.1.7", path = "amadeus-aws", optional = true }
-amadeus-commoncrawl = { version = "=0.1.7", path = "amadeus-commoncrawl", optional = true }
-amadeus-parquet = { version = "=0.1.7", path = "amadeus-parquet", optional = true }
-amadeus-postgres = { version = "=0.1.7", path = "amadeus-postgres", optional = true }
-amadeus-serde = { version = "=0.1.7", path = "amadeus-serde", optional = true }
+amadeus-core = { version = "=0.2.0", path = "amadeus-core" }
+amadeus-derive = { version = "=0.2.0", path = "amadeus-derive" }
+amadeus-types = { version = "=0.2.0", path = "amadeus-types" }
+amadeus-aws = { version = "=0.2.0", path = "amadeus-aws", optional = true }
+amadeus-commoncrawl = { version = "=0.2.0", path = "amadeus-commoncrawl", optional = true }
+amadeus-parquet = { version = "=0.2.0", path = "amadeus-parquet", optional = true }
+amadeus-postgres = { version = "=0.2.0", path = "amadeus-postgres", optional = true }
+amadeus-serde = { version = "=0.2.0", path = "amadeus-serde", optional = true }
 constellation-rs = { version = "0.1", default-features = false, optional = true }
 futures = "0.3"
 num_cpus = "1.13"
 pin-project = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.2"
-serde_traitobject = "0.2"
+serde_traitobject = { version = "0.2", optional = true }
 tokio = { version = "0.2", features = ["rt-threaded", "rt-util"] }
 
 [dev-dependencies]
