--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,9 +37,23 @@ jobs:
         linux0:
           imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-gnu'
-        # linux1:
-        #   imageName: 'ubuntu-latest'
-        #   rust_target_run: 'i686-unknown-linux-gnu'
-        # linux2:
-        #   imageName: 'ubuntu-latest'
-        #   rust_target_run: 'x86_64-unknown-linux-musl' # i686-unknown-linux-musl silently miscompiles C
+        linux1:
+          imageName: 'ubuntu-latest'
+          rust_target_run: 'x86_64-unknown-linux-musl'
+
+  - template: rust.yml@templates
+    parameters:
+      endpoint: alecmocatta
+      default:
+        rust_toolchain: nightly
+        rust_lint_toolchain: nightly-2020-06-10
+        rust_flags: ''
+        rust_features: 'aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'doc aws commoncrawl postgres csv json'
+        rust_target_check: ''
+        rust_target_build: ''
+        rust_target_run: ''
+      matrix:
+        windows:
+          imageName: 'windows-latest'
+          rust_target_run: 'x86_64-pc-windows-msvc'
