--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -33,6 +33,6 @@ rand = "0.7"
 replace_with = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.2"
-streaming_algorithms = { version = "0.1", path = "../../streaming_algorithms" }
+streaming_algorithms = "0.2"
 sum = { version = "0.1", features = ["serde"] }
 walkdir = "2.2"
