--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
     parameters:
       endpoint: alecmocatta
       default:
-        rust_toolchain: nightly
+        rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
         rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
