--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,11 +41,11 @@ jobs:
           imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-musl'
 
-  - template: rust.yml@templates
+  - template: rust-n.yml@templates
     parameters:
       endpoint: alecmocatta
       default:
-        rust_toolchain: nightly
+        rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
         rust_features: 'aws commoncrawl parquet postgres csv json'
