--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ tokio = { version = "0.2", features = ["rt-threaded", "rt-util"] }
 either = { version = "1.5", features = ["serde"] }
 rand = "0.7"
 streaming_algorithms = "0.2"
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "0.2", features = ["macros", "time"] }
 
 [[example]]
 name = "common_crawl"
