--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,24 +22,21 @@ jobs:
         rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
-        rust_features: 'aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
+        rust_features: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
         rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
       matrix:
-        # windows:
-        #   imageName: 'windows-latest'
-        #   rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc' # currently broken building crate-type=lib: x86_64-pc-windows-gnu i686-pc-windows-gnu
         mac0:
           imageName: 'macos-latest'
           rust_target_run: 'x86_64-apple-darwin'
         linux0:
           imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-gnu'
-        linux1:
-          imageName: 'ubuntu-latest'
-          rust_target_run: 'x86_64-unknown-linux-musl'
+        # linux1:
+        #   imageName: 'ubuntu-latest'
+        #   rust_target_run: 'x86_64-unknown-linux-musl' # TODO: https://github.com/rust-lang/rust/issues/73451
 
   - template: rust-n.yml@templates
     parameters:
