--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ jobs:
         rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
-        rust_features: 'aws commoncrawl parquet postgres csv json'
+        rust_features: ';aws commoncrawl parquet postgres csv json'
         rust_doc_features: 'doc aws commoncrawl postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
