fix doc build and PathBuf on windows

--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -36,3 +36,4 @@ serde_closure = "0.2"
 streaming_algorithms = "0.2"
 sum = { version = "0.1", features = ["serde"] }
 walkdir = "2.2"
+widestring = "0.4"
