--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,8 @@ jobs:
         rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
-        rust_features: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
+        rust_features: 'constellation aws commoncrawl parquet postgres csv json'
         rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
@@ -45,7 +46,8 @@ jobs:
         rust_toolchain: nightly-2020-06-10
         rust_lint_toolchain: nightly-2020-06-10
         rust_flags: ''
-        rust_features: ';aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
+        rust_features: 'aws commoncrawl parquet postgres csv json'
         rust_doc_features: 'doc aws commoncrawl postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
