--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,8 @@ jobs:
     parameters:
       endpoint: alecmocatta
       default:
-        rust_toolchain: nightly-2020-06-10
-        rust_lint_toolchain: nightly-2020-06-10
+        rust_toolchain: nightly
+        rust_lint_toolchain: nightly-2020-06-21
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
         rust_features: 'constellation aws commoncrawl parquet postgres csv json'
@@ -43,8 +43,8 @@ jobs:
     parameters:
       endpoint: alecmocatta
       default:
-        rust_toolchain: nightly-2020-06-10
-        rust_lint_toolchain: nightly-2020-06-10
+        rust_toolchain: nightly
+        rust_lint_toolchain: nightly-2020-06-21
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
         rust_features: 'aws commoncrawl parquet postgres csv json'
