--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
         rust_features: 'constellation aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'doc constellation aws commoncrawl postgres csv json'
+        rust_doc_features: 'constellation aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
@@ -48,7 +48,7 @@ jobs:
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
         rust_features: 'aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'doc aws commoncrawl postgres csv json'
+        rust_doc_features: 'aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
