--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -23,6 +23,7 @@ amadeus-core = { version = "=0.2.2", path = "../amadeus-core" }
 amadeus-types = { version = "=0.2.2", path = "../amadeus-types" }
 bytes = "0.5"
 chrono = { version = "0.4", default-features = false }
+educe = "0.4"
 futures = "0.3"
 pin-project = "0.4"
 postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
