--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -23,6 +23,7 @@ amadeus-core = { version = "=0.2.2", path = "../amadeus-core" }
 amadeus-types = { version = "=0.2.2", path = "../amadeus-types" }
 chrono = { version = "0.4", default-features = false, features = ["serde"] }
 csv = "1.0"
+educe = "0.4"
 futures = "0.3"
 linked-hash-map = "0.5"
 serde = { version = "1.0", features = ["derive"] }
