--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ tokio = { version = "0.2", features = ["rt-threaded", "rt-util"] }
 [dev-dependencies]
 either = { version = "1.5", features = ["serde"] }
 rand = "0.7"
+serde_json = "1.0"
 streaming_algorithms = "0.2"
 tokio = { version = "0.2", features = ["macros", "time"] }
 
