refactor ParallelStream/Pipe/Sink to use Stream/Pipe/Sink traits directly

--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -32,6 +32,6 @@ replace_with = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.2"
 streaming_algorithms = "0.2"
-sum = { version = "0.1", features = ["serde"] }
+sum = { version = "0.1", features = ["futures", "serde"] }
 walkdir = "2.2"
 widestring = "0.4"
