--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
       endpoint: alecmocatta
       default:
         rust_toolchain: nightly
-        rust_lint_toolchain: nightly-2020-06-30
+        rust_lint_toolchain: nightly-2020-07-05
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
         rust_features: 'constellation aws commoncrawl parquet postgres csv json'
@@ -35,16 +35,16 @@ jobs:
         linux0:
           imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-gnu'
-        # linux1:
-        #   imageName: 'ubuntu-latest'
-        #   rust_target_run: 'x86_64-unknown-linux-musl' # TODO: https://github.com/rust-lang/rust/issues/73451
+        linux1:
+          imageName: 'ubuntu-latest'
+          rust_target_run: 'x86_64-unknown-linux-musl'
 
   - template: rust-n.yml@templates
     parameters:
       endpoint: alecmocatta
       default:
         rust_toolchain: nightly
-        rust_lint_toolchain: nightly-2020-06-30
+        rust_lint_toolchain: nightly-2020-07-05
         rust_flags: ''
         rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
         rust_features: 'aws commoncrawl parquet postgres csv json'
