--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -31,3 +31,4 @@ serde_bytes = "0.11"
 serde_closure = "0.2"
 serde_json = "1.0"
 sum = { version = "0.1", features = ["serde"] }
+vec-utils = "0.2"
