--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -28,3 +28,4 @@ once_cell = "1.0"
 ordered-float = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
+vec-utils = "0.2"
