--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,9 +35,9 @@ jobs:
         linux0:
           imageName: 'ubuntu-latest'
           rust_target_run: 'x86_64-unknown-linux-gnu'
-        linux1:
-          imageName: 'ubuntu-latest'
-          rust_target_run: 'x86_64-unknown-linux-musl'
+        # linux1:
+        #   imageName: 'ubuntu-latest'
+        #   rust_target_run: 'x86_64-unknown-linux-musl'
 
   - template: rust-n.yml@templates
     parameters:
