--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "amadeus-serde"
-version = "0.3.0"
+version = "0.3.1"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
@@ -10,17 +10,17 @@ Harmonious distributed data analysis in Rust.
 """
 repository = "https://github.com/alecmocatta/amadeus"
 homepage = "https://github.com/alecmocatta/amadeus"
-documentation = "https://docs.rs/amadeus/0.3.0"
+documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
 
 [badges]
-azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
+azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-amadeus-core = { version = "=0.3.0", path = "../amadeus-core" }
-amadeus-types = { version = "=0.3.0", path = "../amadeus-types" }
+amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
+amadeus-types = { version = "=0.3.1", path = "../amadeus-types" }
 chrono = { version = "0.4", default-features = false, features = ["serde"] }
 csv = "1.0"
 educe = "0.4"
