--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "amadeus-types"
-version = "0.3.0"
+version = "0.3.1"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["concurrency", "science", "database", "date-and-time", "data-structures"]
@@ -10,16 +10,16 @@ Harmonious distributed data analysis in Rust.
 """
 repository = "https://github.com/alecmocatta/amadeus"
 homepage = "https://github.com/alecmocatta/amadeus"
-documentation = "https://docs.rs/amadeus/0.3.0"
+documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
 
 [badges]
-azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
+azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-amadeus-core = { version = "=0.3.0", path = "../amadeus-core" }
+amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
 chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
 chrono-tz = { version = "0.5", features = ["serde"] }
 fxhash = "0.2"
