remove specialization and have a non-simd fallback for stable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,11 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/streaming_algorithms", pipeline = "tests", build = "16" }
 maintenance = { status = "actively-developed" }
 
+[features]
+nightly = ["packed_simd"]
+
 [dependencies]
 twox-hash = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 rand = { version = "0.7", features = ["small_rng"] }
-packed_simd = { version = "0.3", features = ["into_bits"] }
+packed_simd = { version = "0.3", features = ["into_bits"], optional = true }
