--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,9 @@ jobs:
         rust_toolchain: nightly
         rust_lint_toolchain: nightly-2020-07-07
         rust_flags: ''
-        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;doc;constellation aws commoncrawl parquet postgres csv json'
         rust_features: 'constellation aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'constellation aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'doc constellation aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
@@ -46,9 +46,9 @@ jobs:
         rust_toolchain: nightly
         rust_lint_toolchain: nightly-2020-07-07
         rust_flags: ''
-        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;doc;aws commoncrawl parquet postgres csv json'
         rust_features: 'aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'doc aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
