--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -18,6 +18,10 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
+[features]
+doc = ["serde_closure/nightly"] # this cleans up Fn*() in docs
+nightly = ["streaming_algorithms/nightly"]
+
 [dependencies]
 async-trait = "0.1"
 derive-new = "0.5"
@@ -30,7 +34,7 @@ pin-project = "0.4"
 rand = "0.7"
 replace_with = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = "0.2"
+serde_closure = { version = "0.2", default-features = false }
 streaming_algorithms = "0.2"
 sum = { version = "0.1", features = ["futures", "serde"] }
 walkdir = "2.2"
