--- a/amadeus-parquet/Cargo.toml
+++ b/amadeus-parquet/Cargo.toml
@@ -34,7 +34,7 @@ lz4 = "1.23"
 num-bigint = "0.3"
 quick-error = "1.2.2"
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = "0.2"
+serde_closure = { version = "0.2", default-features = false }
 snap = "1.0"
 sum = "0.1"
 thrift = "0.13"
