--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -28,6 +28,6 @@ futures = "0.3"
 pin-project = "0.4"
 postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = "0.2"
+serde_closure = { version = "0.2", default-features = false }
 sum = "0.1"
 tokio = "0.2"
