all but parquet and constellation working on stable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,10 @@ parquet = ["amadeus-parquet", "amadeus-derive/parquet"]
 postgres = ["amadeus-postgres", "amadeus-derive/postgres"]
 csv = ["amadeus-serde", "amadeus-derive/serde"]
 json = ["amadeus-serde", "amadeus-derive/serde"]
-doc = ["amadeus-core/doc"]
 nightly = ["amadeus-core/nightly"]
 
 [package.metadata.docs.rs]
-features = ["doc", "constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]
+features = ["nightly", "constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]
 
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "amadeus-core" }
@@ -53,7 +52,7 @@ futures = "0.3"
 num_cpus = "1.13"
 pin-project = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = { version = "0.2", default-features = false }
+serde_closure = "0.3"
 serde_traitobject = { version = "0.2", optional = true }
 tokio = { version = "0.2", features = ["rt-threaded", "rt-util", "blocking"] }
 
@@ -67,6 +66,9 @@ tokio = { version = "0.2", features = ["macros", "time"] }
 [patch.crates-io]
 vec-utils = { version = "*", git = "https://github.com/alecmocatta/vec-utils", branch = "stable" }
 streaming_algorithms = { version = "*", git = "https://github.com/alecmocatta/streaming_algorithms", branch = "stable" }
+serde_closure = { version = "*", git = "https://github.com/alecmocatta/serde_closure", branch = "nameable" }
+# serde_closure = { version = "*", path = "../serde_closure" }
+# serde_traitobject = { version = "*", path = "../serde_traitobject" }
 
 [[example]]
 name = "cloudfront_logs"
