--- a/amadeus-aws/Cargo.toml
+++ b/amadeus-aws/Cargo.toml
@@ -18,6 +18,9 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
+[features]
+nightly = []
+
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
 amadeus-types = { version = "=0.3.1", path = "../amadeus-types" }
@@ -31,7 +34,7 @@ once_cell = "1.0"
 rusoto_core = "0.44"
 rusoto_credential = "0.44"
 rusoto_s3 = "0.44"
-serde_closure = { version = "0.2", default-features = false }
+serde_closure = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 tokio = "0.2"
 url = { version = "2.1", features = ["serde"] }
