--- a/amadeus-commoncrawl/Cargo.toml
+++ b/amadeus-commoncrawl/Cargo.toml
@@ -18,6 +18,9 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
+[features]
+nightly = []
+
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
 amadeus-types = { version = "=0.3.1", path = "../amadeus-types" }
@@ -28,7 +31,7 @@ pin-project = "0.4"
 reqwest = "0.10"
 reqwest_resume = "0.3"
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = { version = "0.2", default-features = false }
+serde_closure = "0.3"
 url = { version = "2.1", features = ["serde"] }
 
 # dependency of reqwest/native-tls; ensure it's vendored to simplify cross-compilation
