--- a/amadeus-parquet/Cargo.toml
+++ b/amadeus-parquet/Cargo.toml
@@ -18,6 +18,9 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
+[features]
+nightly = []
+
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
 amadeus-types = { version = "=0.3.1", path = "../amadeus-types" }
@@ -34,7 +37,7 @@ lz4 = "1.23"
 num-bigint = "0.3"
 quick-error = "1.2.2"
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = { version = "0.2", default-features = false }
+serde_closure = "0.3"
 snap = "1.0"
 sum = "0.1"
 thrift = "0.13"
