--- a/amadeus-postgres/Cargo.toml
+++ b/amadeus-postgres/Cargo.toml
@@ -18,6 +18,9 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
 
+[features]
+nightly = []
+
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "../amadeus-core" }
 amadeus-types = { version = "=0.3.1", path = "../amadeus-types" }
@@ -28,6 +31,6 @@ futures = "0.3"
 pin-project = "0.4"
 postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_closure = { version = "0.2", default-features = false }
+serde_closure = "0.3"
 sum = "0.1"
 tokio = "0.2"
