--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,11 @@ jobs:
       endpoint: alecmocatta
       default:
         rust_toolchain: nightly
-        rust_lint_toolchain: nightly-2020-07-07
+        rust_lint_toolchain: nightly-2020-07-12
         rust_flags: ''
-        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;doc;constellation aws commoncrawl parquet postgres csv json'
-        rust_features: 'constellation aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'doc constellation aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json;aws commoncrawl parquet postgres csv json nightly amadeus-aws/nightly amadeus-commoncrawl/nightly amadeus-parquet/nightly amadeus-postgres/nightly amadeus-serde/nightly'
+        rust_features: 'aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
@@ -44,15 +44,40 @@ jobs:
       endpoint: alecmocatta
       default:
         rust_toolchain: nightly
-        rust_lint_toolchain: nightly-2020-07-07
+        rust_lint_toolchain: nightly-2020-07-12
         rust_flags: ''
-        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;doc;aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';nightly;aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json'
         rust_features: 'aws commoncrawl parquet postgres csv json'
-        rust_doc_features: 'doc aws commoncrawl parquet postgres csv json'
+        rust_doc_features: 'aws commoncrawl parquet postgres csv json'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
       matrix:
+        windows:
+          imageName: 'windows-latest'
+          rust_target_run: 'x86_64-pc-windows-msvc'
+
+  - template: rust-n.yml@templates
+    parameters:
+      ordinal: 2
+      endpoint: alecmocatta
+      default:
+        rust_toolchain: beta
+        rust_lint_toolchain: nightly-2020-07-12
+        rust_flags: ''
+        rust_features_clippy: ';aws;commoncrawl;postgres;csv;json;aws commoncrawl postgres csv json'
+        rust_features: 'aws commoncrawl postgres csv json'
+        rust_doc_features: 'aws commoncrawl postgres csv json'
+        rust_target_check: ''
+        rust_target_build: ''
+        rust_target_run: ''
+      matrix:
+        mac:
+          imageName: 'macos-latest'
+          rust_target_run: 'x86_64-apple-darwin'
+        linux:
+          imageName: 'ubuntu-latest'
+          rust_target_run: 'x86_64-unknown-linux-gnu'
         windows:
           imageName: 'windows-latest'
           rust_target_run: 'x86_64-pc-windows-msvc'
