--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ homepage = "https://github.com/alecmocatta/amadeus"
 documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
+build = "src/build.rs"
 
 [badges]
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
@@ -30,10 +31,9 @@ parquet = ["amadeus-parquet", "amadeus-derive/parquet"]
 postgres = ["amadeus-postgres", "amadeus-derive/postgres"]
 csv = ["amadeus-serde", "amadeus-derive/serde"]
 json = ["amadeus-serde", "amadeus-derive/serde"]
-nightly = ["amadeus-core/nightly"]
 
 [package.metadata.docs.rs]
-features = ["nightly", "constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]
+features = ["constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]
 
 [dependencies]
 amadeus-core = { version = "=0.3.1", path = "amadeus-core" }
@@ -62,6 +62,9 @@ rand = "0.7"
 serde_json = "1.0"
 streaming_algorithms = "0.2"
 tokio = { version = "0.2", features = ["macros", "time"] }
+
+[build-dependencies]
+rustversion = "1.0"
 
 [patch.crates-io]
 vec-utils = { version = "*", git = "https://github.com/alecmocatta/vec-utils", branch = "stable" }
