--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -13,14 +13,11 @@ homepage = "https://github.com/alecmocatta/amadeus"
 documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
+build = "src/build.rs"
 
 [badges]
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
 maintenance = { status = "actively-developed" }
-
-[features]
-# uses Fn*() sugar (better docs), and SIMD for streaming_algorithms
-nightly = ["streaming_algorithms/nightly"]
 
 [dependencies]
 async-trait = "0.1"
@@ -39,3 +36,6 @@ streaming_algorithms = "0.2"
 sum = { version = "0.1", features = ["futures", "serde"] }
 walkdir = "2.2"
 widestring = "0.4"
+
+[build-dependencies]
+rustversion = "1.0"
