--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -13,6 +13,7 @@ homepage = "https://github.com/alecmocatta/amadeus"
 documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
+build = "src/build.rs"
 
 [badges]
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
@@ -29,3 +30,6 @@ ordered-float = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
 vec-utils = "0.2"
+
+[build-dependencies]
+rustversion = "1.0"
