--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ homepage = "https://github.com/alecmocatta/amadeus"
 documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
-build = "src/build.rs"
 
 [badges]
 azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
@@ -45,7 +44,7 @@ amadeus-parquet = { version = "=0.3.1", path = "amadeus-parquet", optional = tru
 amadeus-postgres = { version = "=0.3.1", path = "amadeus-postgres", optional = true }
 amadeus-serde = { version = "=0.3.1", path = "amadeus-serde", optional = true }
 async-channel = "1.1"
-constellation-rs = { version = "0.1", default-features = false, optional = true }
+constellation-rs = { version = "0.2.0-alpha.2", default-features = false, optional = true }
 derive-new = "0.5"
 doc-comment = "0.3"
 futures = "0.3"
@@ -69,9 +68,7 @@ rustversion = "1.0"
 [patch.crates-io]
 vec-utils = { version = "*", git = "https://github.com/alecmocatta/vec-utils", branch = "stable" }
 streaming_algorithms = { version = "*", git = "https://github.com/alecmocatta/streaming_algorithms", branch = "stable" }
-serde_closure = { version = "*", git = "https://github.com/alecmocatta/serde_closure", branch = "nameable" }
-# serde_closure = { version = "*", path = "../serde_closure" }
-# serde_traitobject = { version = "*", path = "../serde_traitobject" }
+constellation-rs = { version = "0.2.0-alpha.2", git = "https://github.com/constellation-rs/constellation", branch = "dependabot/cargo/serde_closure-0.3" }
 
 [[example]]
 name = "cloudfront_logs"
