--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "streaming_algorithms"
-version = "0.2.0"
+version = "0.3.0"
 license = "MIT OR Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["data-structures","algorithms","science"]
@@ -10,7 +10,7 @@ SIMD-accelerated implementations of various streaming algorithms, including Coun
 """
 repository = "https://github.com/alecmocatta/streaming_algorithms"
 homepage = "https://github.com/alecmocatta/streaming_algorithms"
-documentation = "https://docs.rs/streaming_algorithms/0.2.0"
+documentation = "https://docs.rs/streaming_algorithms"
 readme = "README.md"
 edition = "2018"
 
