--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,8 @@ jobs:
       rust_lint_toolchain: nightly-2020-07-12
       rust_flags: ''
       rust_features: ''
-      rust_target_check: ''
-      rust_target_build: ''
+      rust_target_check: 'aarch64-unknown-linux-gnu aarch64-unknown-linux-musl'
+      rust_target_build: 'x86_64-unknown-linux-musl i686-unknown-linux-musl'
       rust_target_run: ''
     matrix:
       windows:
@@ -26,12 +26,14 @@ jobs:
         rust_target_run: 'x86_64-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-gnu'
       mac0:
         imageName: 'macos-latest'
+        rust_target_build: 'x86_64-unknown-linux-musl i686-unknown-linux-musl aarch64-apple-ios'
         rust_target_run: 'x86_64-apple-darwin'
       mac1:
         imageName: 'macos-latest'
         rust_toolchain: nightly
         rust_features: ';nightly'
+        rust_target_build: 'x86_64-unknown-linux-musl i686-unknown-linux-musl aarch64-apple-ios'
         rust_target_run: 'x86_64-apple-darwin'
       linux:
         imageName: 'ubuntu-latest'
-        rust_target_run: 'x86_64-unknown-linux-gnu i686-unknown-linux-gnu x86_64-unknown-linux-musl i686-unknown-linux-musl aarch64-unknown-linux-gnu aarch64-unknown-linux-musl'
+        rust_target_run: 'x86_64-unknown-linux-gnu i686-unknown-linux-gnu x86_64-unknown-linux-musl i686-unknown-linux-musl'
