--- a/amadeus-serde/Cargo.toml
+++ b/amadeus-serde/Cargo.toml
@@ -31,7 +31,7 @@ serde_bytes = "0.11"
 serde_closure = "0.3"
 serde_json = "1.0"
 sum = { version = "0.1", features = ["serde"] }
-vec-utils = "0.2"
+recycle = "0.1"
 
 [build-dependencies]
 rustversion = "1.0"
