--- a/amadeus-types/Cargo.toml
+++ b/amadeus-types/Cargo.toml
@@ -28,7 +28,7 @@ once_cell = "1.0"
 ordered-float = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.1", features = ["serde"] }
-vec-utils = "0.2"
+recycle = "0.1"
 
 [build-dependencies]
 rustversion = "1.0"
