--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,12 +55,18 @@ serde_closure = "0.3"
 serde_traitobject = { version = "0.2", optional = true }
 tokio = { version = "0.2", features = ["rt-threaded", "rt-util", "blocking"] }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["Blob", "Performance", "Response", "Window"] }
+
 [dev-dependencies]
 either = { version = "1.5", features = ["serde"] }
 rand = "0.7"
 serde_json = "1.0"
 streaming_algorithms = "0.3"
 tokio = { version = "0.2", features = ["macros", "time"] }
+wasm-bindgen-test = "0.3"
 
 [build-dependencies]
 rustversion = "1.0"
