--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,26 +45,52 @@ jobs:
         #   imageName: 'ubuntu-latest'
         #   rust_target_run: 'x86_64-unknown-linux-musl'
 
-  # - template: rust-n.yml@templates
-  #   parameters:
-  #     endpoint: alecmocatta
-  #     default:
-  #       rust_toolchain: stable
-  #       rust_lint_toolchain: nightly-2020-07-12
-  #       rust_flags: ''
-  #       rust_features_clippy: ';aws;commoncrawl;postgres;csv;json;aws commoncrawl postgres csv json'
-  #       rust_features: 'aws commoncrawl postgres csv json'
-  #       rust_doc_features: 'aws commoncrawl postgres csv json'
-  #       rust_target_check: ''
-  #       rust_target_build: ''
-  #       rust_target_run: ''
-  #     matrix:
-  #       mac:
-  #         imageName: 'macos-latest'
-  #         rust_target_run: 'x86_64-apple-darwin'
-  #       linux:
-  #         imageName: 'ubuntu-latest'
-  #         rust_target_run: 'x86_64-unknown-linux-gnu'
-  #       windows:
-  #         imageName: 'windows-latest'
-  #         rust_target_run: 'x86_64-pc-windows-msvc'
+  - template: rust-n.yml@templates
+    parameters:
+      endpoint: alecmocatta
+      default:
+        rust_toolchain: stable
+        rust_lint_toolchain: nightly-2020-07-12
+        rust_flags: ''
+        rust_features_clippy: ';aws;commoncrawl;postgres;csv;json;aws commoncrawl postgres csv json'
+        rust_features: 'aws commoncrawl postgres csv json'
+        rust_doc_features: 'aws commoncrawl postgres csv json'
+        rust_target_check: ''
+        rust_target_build: ''
+        rust_target_run: ''
+      matrix:
+        mac:
+          imageName: 'macos-latest'
+          rust_target_run: 'x86_64-apple-darwin'
+        linux:
+          imageName: 'ubuntu-latest'
+          rust_target_run: 'x86_64-unknown-linux-gnu'
+        windows:
+          imageName: 'windows-latest'
+          rust_target_run: 'x86_64-pc-windows-msvc'
+
+  - template: rust-n.yml@templates
+    parameters:
+      ordinal: 2
+      endpoint: alecmocatta
+      default:
+        rust_toolchain: stable nightly
+        rust_lint_toolchain: nightly-2020-07-12
+        rust_flags: ''
+        rust_packages: '-p amadeus-core -p amadeus-derive -p amadeus-serde -p amadeus-types -p amadeus'
+        rust_features_clippy: ';csv;json;csv json'
+        rust_features: 'csv json'
+        rust_doc_features: 'csv json'
+        rust_target_check: ''
+        rust_target_build: ''
+        rust_target_run: ''
+      matrix:
+        mac:
+          imageName: 'macos-latest'
+          rust_target_run: 'wasm32-unknown-unknown'
+        linux:
+          imageName: 'ubuntu-latest'
+          rust_target_run: 'wasm32-unknown-unknown'
+        windows:
+          imageName: 'windows-latest'
+          rust_target_run: 'wasm32-unknown-unknown'
