--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,10 +66,15 @@ rand = "0.7"
 serde_json = "1.0"
 streaming_algorithms = "0.3"
 tokio = { version = "0.2", features = ["macros", "time"] }
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
 
 [build-dependencies]
 rustversion = "1.0"
+
+[patch.crates-io]
+lz4 = { git = "https://github.com/alecmocatta/lz4-rs", branch = "wasm" }
 
 [[example]]
 name = "cloudfront_logs"
@@ -127,12 +132,20 @@ harness = false
 required-features = ["parquet"]
 
 [[test]]
+name = "parquet_wasm"
+required-features = ["parquet"]
+
+[[test]]
 name = "csv"
 required-features = ["csv"]
 
 [[test]]
 name = "csv_dist"
 harness = false
+required-features = ["csv"]
+
+[[test]]
+name = "csv_wasm"
 required-features = ["csv"]
 
 [[test]]
