--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,9 +37,11 @@ jobs:
           rust_target_run: 'x86_64-pc-windows-msvc'
         mac:
           imageName: 'macos-latest'
+          rust_target_build: 'aarch64-apple-ios'
           rust_target_run: 'x86_64-apple-darwin'
         linux0:
           imageName: 'ubuntu-latest'
+          rust_target_build: 'x86_64-unknown-linux-musl'
           rust_target_run: 'x86_64-unknown-linux-gnu'
         # linux1:
         #   imageName: 'ubuntu-latest'
@@ -61,6 +63,7 @@ jobs:
       matrix:
         mac:
           imageName: 'macos-latest'
+          rust_target_build: 'aarch64-apple-ios'
           rust_target_run: 'x86_64-apple-darwin'
         linux:
           imageName: 'ubuntu-latest'
@@ -85,9 +88,10 @@ jobs:
         rust_target_build: ''
         rust_target_run: ''
       matrix:
-        mac:
-          imageName: 'macos-latest'
-          rust_target_run: 'wasm32-unknown-unknown'
+        # TODO: clang version doesn't support wasm32-unknown-wasi
+        # mac:
+        #   imageName: 'macos-latest'
+        #   rust_target_run: 'wasm32-unknown-unknown'
         linux:
           imageName: 'ubuntu-latest'
           rust_target_run: 'wasm32-unknown-unknown'
