--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -33,7 +33,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_closure = "0.3"
 streaming_algorithms = "0.3"
 sum = { version = "0.1", features = ["futures", "serde"] }
-tokio = "0.2"
+tokio = { version = "0.2", features = ["blocking", "rt-core"] }
 walkdir = "2.2"
 widestring = "0.4"
 
