--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ parquet = ["amadeus-parquet", "amadeus-derive/parquet"]
 postgres = ["amadeus-postgres", "amadeus-derive/postgres"]
 csv = ["amadeus-serde", "amadeus-derive/serde"]
 json = ["amadeus-serde", "amadeus-derive/serde"]
+bench = ["serde-csv", "once_cell", "arrow-parquet", "rayon"]
 
 [package.metadata.docs.rs]
 features = ["constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]
@@ -47,7 +48,6 @@ async-channel = "1.1"
 bincode = { version = "1.3", optional = true }
 constellation-rs = { version = "0.2.0-alpha.2", default-features = false, optional = true }
 derive-new = "0.5"
-doc-comment = "0.3"
 futures = "0.3"
 num_cpus = "1.13"
 pin-project = "0.4"
@@ -56,16 +56,21 @@ serde_closure = "0.3"
 serde_traitobject = { version = "0.2", optional = true }
 tokio = { version = "0.2", features = ["rt-threaded", "rt-util", "blocking"] }
 
+# Move to dev-dependencies once fixed: https://github.com/rust-lang/cargo/issues/1596
+arrow-parquet = { package = "parquet", version = "1.0", default-features = false, features = ["brotli", "flate2", "lz4", "snap"], optional = true }
+once_cell = { version = "1.4", optional = true }
+rayon = { version = "1.3", optional = true }
+serde-csv = { package = "csv", version = "1.0", optional = true }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Blob", "Performance", "Response", "Window"] }
 
 [dev-dependencies]
+doc-comment = "0.3"
 either = { version = "1.5", features = ["serde"] }
-once_cell = "1.4"
 rand = "0.7"
-rayon = "1.3"
 serde_json = "1.0"
 streaming_algorithms = "0.3"
 tokio = { version = "0.2", features = ["macros", "time"] }
@@ -167,3 +172,15 @@ name = "postgres_dist"
 harness = false
 required-features = ["postgres"]
 test = false # TODO set up postgres on CI
+
+[[bench]]
+name = "csv"
+required-features = ["bench", "csv"]
+
+[[bench]]
+name = "in_memory"
+required-features = ["bench"]
+
+[[bench]]
+name = "parquet"
+required-features = ["bench", "parquet"]
