--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,16 @@ wasm-bindgen-test = "0.3"
 [build-dependencies]
 rustversion = "1.0"
 
+[profile.bench]
+codegen-units = 1
+debug = 2
+incremental = false
+lto = true
+# panic = "abort" # this is disallowed by cargo currently
+
+[patch.crates-io]
+serde_closure = { git = "https://github.com/alecmocatta/serde_closure", branch = "nameable" }
+
 [[example]]
 name = "cloudfront_logs"
 required-features = ["aws"]
