--- a/amadeus-core/Cargo.toml
+++ b/amadeus-core/Cargo.toml
@@ -26,6 +26,7 @@ either = { version = "1.5", features = ["serde"] }
 futures = "0.3"
 indexmap = { version = "1.5", features = ["serde-1"] }
 itertools = "0.9"
+multimap = "0.8"
 owned_chars = "0.3"
 pin-project = "0.4"
 rand = "0.7"
