--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ Harmonious distributed data processing & analysis in Rust.
 
 parquet postgres aws s3 cloudfront elb json csv logs hadoop hdfs arrow common crawl
 """
-repository = "https://github.com/alecmocatta/amadeus"
-homepage = "https://github.com/alecmocatta/amadeus"
+repository = "https://github.com/constellation-rs/amadeus"
+homepage = "https://github.com/constellation-rs/amadeus"
 documentation = "https://docs.rs/amadeus"
 readme = "README.md"
 edition = "2018"
