--- a/amadeus-ml/Cargo.toml
+++ b/amadeus-ml/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "amadeus-ml"
-version = "0.4.0"
+version = "0.4.1"
 license = "Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>", "Maciej Kula <maciej.kula@gmail.com>"]
 categories = ["data-structures", "algorithms", "science"]
@@ -20,15 +20,17 @@ maintenance = { status = "actively-developed" }
 
 [features]
 fast-math = []
+openblas = ["ndarray/blas", "blas-src/openblas", "openblas-src/static"]
 
 [dependencies]
 approx = "0.3"
+blas-src = { version = "0.2", optional = true }
 hibitset = "0.6"
 itertools = "0.9"
 ndarray = { version = "0.13", features = ["approx", "serde"] }
+openblas-src = { version = "0.6", default-features = false, optional = true }
 rand = { version = "0.7", features = ["serde1"] }
 rand_distr = "0.2"
-rayon = "1.3"
 serde = { version = "1", features = ["derive", "rc"] }
 smallvec = { version = "1.4", features = ["serde"] }
 
@@ -36,10 +38,8 @@ smallvec = { version = "1.4", features = ["serde"] }
 rustversion = "1.0"
 
 [dev-dependencies]
-# ndarray = { version = "0.13", features = ["blas"] }
-# blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
-# openblas-src = { version = "0.6", default-features = false, features = ["static"] }
-criterion = "0.2.3"
+criterion = "0.3"
+rayon = "1.3"
 
 [[bench]]
 name = "benchmark"
