--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,18 @@ jobs:
         rust_toolchain: nightly
         rust_lint_toolchain: nightly-2020-07-26
         rust_flags: ''
-        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;constellation aws commoncrawl parquet postgres csv json bench'
-        rust_features: 'constellation aws commoncrawl parquet postgres csv json bench'
-        rust_doc_features: 'constellation aws commoncrawl parquet postgres csv json'
+        rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;ml;constellation aws commoncrawl parquet postgres csv json ml bench'
+        rust_features: 'constellation aws commoncrawl parquet postgres csv json ml bench'
+        rust_doc_features: 'constellation aws commoncrawl parquet postgres csv json ml'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
       matrix:
         windows:
           imageName: 'windows-latest'
-          rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;aws commoncrawl parquet postgres csv json bench'
-          rust_features: 'aws commoncrawl parquet postgres csv json bench'
-          rust_doc_features: 'aws commoncrawl parquet postgres csv json'
+          rust_features_clippy: ';aws;commoncrawl;parquet;postgres;csv;json;ml;aws commoncrawl parquet postgres csv json ml bench'
+          rust_features: 'aws commoncrawl parquet postgres csv json ml bench'
+          rust_doc_features: 'aws commoncrawl parquet postgres csv json ml'
           rust_target_run: 'x86_64-pc-windows-msvc'
         mac:
           imageName: 'macos-latest'
@@ -54,9 +54,9 @@ jobs:
         rust_toolchain: stable
         rust_lint_toolchain: nightly-2020-07-26
         rust_flags: ''
-        rust_features_clippy: ';aws;commoncrawl;postgres;csv;json;aws commoncrawl postgres csv json'
-        rust_features: 'aws commoncrawl postgres csv json'
-        rust_doc_features: 'aws commoncrawl postgres csv json'
+        rust_features_clippy: ';aws;commoncrawl;postgres;csv;json;ml;aws commoncrawl postgres csv json ml'
+        rust_features: 'aws commoncrawl postgres csv json ml'
+        rust_doc_features: 'aws commoncrawl postgres csv json ml'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
@@ -81,9 +81,9 @@ jobs:
         rust_lint_toolchain: nightly-2020-07-26
         rust_flags: ''
         rust_packages: '-p amadeus-core -p amadeus-derive -p amadeus-parquet -p amadeus-serde -p amadeus-types -p amadeus'
-        rust_features_clippy: ';parquet;csv;json;parquet csv json'
-        rust_features: 'parquet csv json'
-        rust_doc_features: 'parquet csv json'
+        rust_features_clippy: ';parquet;csv;json;ml;parquet csv json ml'
+        rust_features: 'parquet csv json ml'
+        rust_doc_features: 'parquet csv json ml'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
@@ -94,7 +94,7 @@ jobs:
         #   rust_target_run: 'wasm32-unknown-unknown'
         linux:
           imageName: 'ubuntu-latest'
-          rust_target_run: 'wasm32-unknown-unknown'
+          rust_target_build: 'wasm32-unknown-unknown'
         # TODO: headless browser fails: driver status: exit code: 1
         # windows:
         #   imageName: 'windows-latest'
@@ -109,19 +109,19 @@ jobs:
         rust_lint_toolchain: nightly-2020-07-26
         rust_flags: ''
         rust_packages: '-p amadeus-core -p amadeus-derive -p amadeus-serde -p amadeus-types -p amadeus'
-        rust_features_clippy: ';csv;json;csv json'
-        rust_features: 'csv json'
-        rust_doc_features: 'csv json'
+        rust_features_clippy: ';csv;json;ml;csv json ml'
+        rust_features: 'csv json ml'
+        rust_doc_features: 'csv json ml'
         rust_target_check: ''
         rust_target_build: ''
         rust_target_run: ''
       matrix:
         mac:
           imageName: 'macos-latest'
-          rust_target_run: 'wasm32-unknown-unknown'
+          rust_target_build: 'wasm32-unknown-unknown'
         linux:
           imageName: 'ubuntu-latest'
-          rust_target_run: 'wasm32-unknown-unknown'
+          rust_target_build: 'wasm32-unknown-unknown'
         # TODO: headless browser fails: driver status: exit code: 1
         # windows:
         #   imageName: 'windows-latest'
